--- a/.gitignorerc
+++ b/.gitignorerc
@@ -1,3 +1,3 @@
-macos,linux,windows,jetbrains+all,eclipse,code,node
+macos,linux,windows,jetbrains+all,eclipse,code
 # the above line is passed to gitignore.io; add anything custom below, then execute .gitignore.sh
 release*
